[gd_scene load_steps=10 format=3 uid="uid://b0n0lm2j5vpmh"]

[ext_resource type="Texture2D" uid="uid://cm2lut0caomdr" path="res://assets/sprites/slime_green.png" id="1_5g1i1"]
[ext_resource type="Script" path="res://scripts/slime.gd" id="1_i65yb"]
[ext_resource type="PackedScene" uid="uid://b82rk1c4hjhg" path="res://scenes/killzone.tscn" id="2_cvhvc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hb1uj"]
atlas = ExtResource("1_5g1i1")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jnkc"]
atlas = ExtResource("1_5g1i1")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fedxy"]
atlas = ExtResource("1_5g1i1")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3714s"]
atlas = ExtResource("1_5g1i1")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_tvqqs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb1uj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jnkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fedxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3714s")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_owwis"]
size = Vector2(10, 12)

[node name="Slime" type="Node2D"]
script = ExtResource("1_i65yb")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(7, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-7, 0)

[node name="RayCastDownLeft" type="RayCast2D" parent="."]
position = Vector2(-6, -6)
target_position = Vector2(0, 16)

[node name="RayCastDownRight" type="RayCast2D" parent="."]
position = Vector2(6, -6)
target_position = Vector2(0, 16)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_tvqqs")
autoplay = "default"

[node name="Killzone" parent="." instance=ExtResource("2_cvhvc")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_owwis")

[node name="RayCastFloor" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(0, 6)

[node name="RayCastFloor2" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(0, 5)
